spacing issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -241,6 +241,7 @@ footer > a {
 }
 
 .show--links-category div {
+    margin-bottom: 10px;
     margin-top: 5px;
 }
 
